GNOME Bugzilla – Bug 724053
Fix unclickable dialogue when parent is modal
Last modified: 2014-02-22 07:02:48 UTC
.
Created attachment 268698 [details] [review] Fix unclickable dialogue when parent is modal When the parent of the about or preferences dialogue is modal, you can't click on anything in the dialogue unless it is modal as well.
Review of attachment 268698 [details] [review]: Looks good to me.
Attachment 268698 [details] pushed as 9484364 - Fix unclickable dialogue when parent is modal
*** Bug 724936 has been marked as a duplicate of this bug. ***