Fix unclickable dialogue when parent is modal

When the parent of the about or preferences dialogue is modal,
you can't click on anything in the dialogue unless it is modal as
well.

https://bugzilla.gnome.org/show_bug.cgi?id=724053